<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient">

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/textViewQues2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:textSize="25dp"
        android:text="@string/ques_two" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="50dp">

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioAnswer1Q2"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_option1"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/radioAnswer2Q2"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_option2"
                    android:textSize="20dp" />




                <RadioButton
                    android:id="@+id/radioAnswer4Q2"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_option3"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/radioAnswer3Q2"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_option4"
                    android:textSize="20dp" />

        </RadioGroup>
    </TableLayout>

    <Button
        android:id="@+id/ButtonNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/next_ques" />


</LinearLayout>