<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout"
    tools:context="com.example.purva.quizapp.MainActivity"
    android:background="@drawable/gradient">


    <TextView
        android:id="@+id/textViewQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:layout_gravity="center"
        android:text="@string/quiz_title"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/textViewEnterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewQuiz"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="54dp"
        android:text="@string/quiz_enter_name"
        android:textSize="25dp" />

   <EditText
       android:id="@+id/nameToBeDisplayed"
       android:layout_width="200dp"
       android:layout_marginTop="20dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:gravity="center"/>



    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:layout_gravity="center"
        android:text="@string/start" />

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_below="@+id/buttonStart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp">

        <ImageView
            android:id="@+id/imageViewFlipper1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="VectorDrawableCompat"
            android:src="@drawable/welcome"/>
        <ImageView
            android:id="@+id/imageViewFlipper2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="VectorDrawableCompat"
            android:src="@drawable/havefun"/>

    </ViewFlipper>




</LinearLayout>
